--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "bootstrap": "^5.0.2",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-bootstrap": "^2.0.0-beta.4",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
