--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
-    "react-toastify": "^7.0.4",
     "react-bootstrap": "^2.0.0-beta.4",
-    "sequelize": "^6.3.5"
+    "react-toastify": "^7.0.4",
+    "sequelize": "^6.3.5",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
