--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-core": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^7.0.4",
     "sequelize": "^6.3.5",
     "validator": "^13.6.0"
