--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.0.0",
     "bootstrap": "^5.0.2",
     "compression": "^1.7.3",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
