--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "graceshopper",
+  "name": "rayskitchen",
   "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "Fullstack Academy Graceshopper Group Project",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
